--- a/templates/analyses/report/_static.html
+++ b/templates/analyses/report/_static.html
@@ -128,27 +128,55 @@
             </div>
             <div class="tab-pane fade" id="server-hex">
                 <div class="row-fluid">
-                    <table class="hexview">
-                        {% for line in analysis.image_id|hexview %}
-                            <tr>
-                                <td>
-                                    <span class="address">{{ line.address }}</span>
-                                </td>
-                                <td  style="background: #C1DCFF;">
-                                    <table>
-                                        <tr>
-                                            <td>{{ line.hex }}</td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td>
-                                    <span class="lineText">{{ line.text }}</span>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </table>
+                    <div class="hexview"></div>
+{#                    <table class="hexview">#}
+{#                        {% for line in analysis.image_id|hexview %}#}
+{#                            <tr>#}
+{#                                <td>#}
+{#                                    <span class="address">{{ line.address }}</span>#}
+{#                                </td>#}
+{#                                <td style="background: #C1DCFF;">#}
+{#                                    <table>#}
+{#                                        <tr>#}
+{#                                            <td>{{ line.hex }}</td>#}
+{#                                        </tr>#}
+{#                                    </table>#}
+{#                                </td>#}
+{#                                <td>#}
+{#                                    <span class="lineText">{{ line.text }}</span>#}
+{#                                </td>#}
+{#                            </tr>#}
+{#                        {% endfor %}#}
+{#                    </table>#}
+                    <div>
+                        <a id="hexdown" class="btn btn-warning"> giu</a>
+                        <a id="hexup" class="btn btn-warning">su</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    var id = 1;
+    $(document).ready(function() {
+        $('.hexview').load('hex/page/'+ id);
+    });
+
+    function loadPage(id){
+        $.get('hex/page/'+ id, function(data) {
+            $('.hexview').html(data);
+        });
+    }
+    $('#hexdown').click(function(){
+        id = (id - 1);
+        if(id > '0'){
+            loadPage(id);
+        }
+    });
+    $('#hexup').click(function(){
+        id = (id + 1);
+        loadPage(id);
+    });
+</script>
