Added API key per user

--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -47,6 +47,12 @@
                             </p>
                             <span class="pull-right">{{ user.email }}</span>
                         </div>
+                        <div class="title display-table">
+                            <p>
+                                API key
+                            </p>
+                            <span class="pull-right">{{ user.api_key }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
