--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -28,6 +28,9 @@
                     <li>
                         <a href="">Dependence</a>
                     </li>
+                    <li>
+                        <a href="">Settings</a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="users">
