--- a/templates/analyses/report/_map.html
+++ b/templates/analyses/report/_map.html
@@ -4,54 +4,4 @@
     </li>
 </ul>
 
-<div  id="map_canvas" style="width:1100px; height:600px"></div>
-
-<div id="mapinfo">
-    <dl class="dl-horizontal pull-left">
-        {% for k, v in analysis.report.metadata.Exif.GPSInfo.iteritems %}
-        <dt>{{ k|upper }}</dt>
-        <dd>{% include 'analyses/report/_visualize_value.html' with value=v %}</dd>
-        {% endfor %}
-    </dl>
-    <dl class="dl-horizontal pull-right">
-        <dt>Latitude</dt>
-        <dd>{{ analysis.report.metadata.gps.pos.Latitude }}</dd>
-        <dt>Longitude</dt>
-        <dd>{{ analysis.report.metadata.gps.pos.Longitude }}</dd>
-        <dt>Altitude</dt>
-        <dd>{{ analysis.report.metadata.gps.Altitude }}</dd>
-    </dl>
-</div>
-<script>
-$(document).ready(function(){
-    $('#map_canvas').fadeIn();
-    internetStatus();
-});
-
-var map = null;
-    function initialize() {
-        var pos = new google.maps.LatLng({{ analysis.report.metadata.gps.pos.Latitude|floatformat:6 }}, {{ analysis.report.metadata.gps.pos.Longitude|floatformat:6 }});
-        var mapOptions = {
-            center: pos,
-            zoom: 7,
-            mapTypeId: google.maps.MapTypeId.HYBRID
-        };
-        map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
-        marker = new google.maps.Marker({
-            position: pos,
-            map: map,
-            title: "Image location"
-        });
-    }
-
-function loadScript() {
-  var script = document.createElement("script");
-  script.type = "text/javascript";
-  script.src = "http://maps.google.com/maps/api/js?sensor=false&callback=initialize";
-  document.body.appendChild(script);
-  $('a[data-toggle="tab"]').on('shown', function (e) {
-        google.maps.event.trigger(map, 'resize');
-        map.setCenter(marker.getPosition());
-    });
-}
-</script>
+{% include 'analyses/report/_staticMap.html' %}
