Modified layout static report

--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -48,7 +48,7 @@
                             </h1>
                             <h1 class="pull-right btn-group">
                                 <a href="{% url "analyses.views.image" analysis.image_id %}" class="btn"><i class="icon-download"></i> Download</a>
-                                <a href="{% url "analyses.views.static_report" analysis.id %}" class="btn"><i class="icon-download-alt"></i> Export</a>
+                                <a href="{% url "analyses.views.static_report" analysis.id %}" class="btn" target="_blank"><i class="icon-download-alt"></i> Export</a>
                             </h1>
                         </div>
                     </div>
