Adding a wait icon for hexview

--- a/templates/analyses/report/_static.html
+++ b/templates/analyses/report/_static.html
@@ -69,6 +69,7 @@
                     <div>
                         <a id="hexdown" class="btn btn-warning">Prev</a>
                         <a id="hexup" class="btn btn-warning">Next</a>
+                        <img class="hide" id="wait" src="{{ STATIC_URL }}img/fancybox/fancybox_loading.gif">
                     </div>
                 </div>
             </div>
@@ -87,17 +88,20 @@
     function loadPage(page){
         $.get('{% url "analyses.views.hex_dump" analysis.id %}?page='+ page, function(data) {
             $('.hexview').html(data);
+            $('#wait').hide();
         });
     }
 
     $('#hexdown').click(function(){
         if(current_page > 0){
+            $('#wait').show();
             current_page = (current_page - 1);
             loadPage(current_page);
         }
     });
 
     $('#hexup').click(function(){
+        $('#wait').show();
         current_page = (current_page + 1);
         loadPage(current_page);
     });
