Modified hexview layout

--- a/templates/analyses/report/_hexdump.html
+++ b/templates/analyses/report/_hexdump.html
@@ -4,7 +4,9 @@
             <td>
                 <span class="address">{{ line.address }}</span>
             </td>
-            <td>{{ line.hex }}</td>
+            <td>
+                <span class="lineHex">{{ line.hex }}</span>
+            </td>
             <td>
                 <span class="lineText">{{ line.text }}</span>
             </td>
