--- a/templates/analyses/report/_static.html
+++ b/templates/analyses/report/_static.html
@@ -66,7 +66,8 @@
             <div class="tab-pane fade" id="server-hex">
                 <div class="row-fluid">
                     <div class="hexview"></div>
-                    <div>
+                    <br>
+                    <div class="center">
                         <a id="hexdown" class="btn btn-warning">Prev</a>
                         <a id="hexup" class="btn btn-warning">Next</a>
                         <img class="hide" id="wait" src="{{ STATIC_URL }}img/fancybox/fancybox_loading.gif">
