--- a/templates/analyses/report/_static.html
+++ b/templates/analyses/report/_static.html
@@ -68,9 +68,9 @@
                     <div class="hexview"></div>
                     <br>
                     <div class="center">
-                        <a id="hexdown" class="btn btn-warning">Prev</a>
-                        <a id="hexup" class="btn btn-warning">Next</a>
-                        <img class="hide" id="wait" src="{{ STATIC_URL }}img/fancybox/fancybox_loading.gif">
+                        <a id="hexdown" class="btn">Prev</a>
+                        <a id="hexup" class="btn">Next</a>
+                        <img class="hide" id="wait" src="{{ STATIC_URL }}img/ico/icona_wait.gif">
                     </div>
                 </div>
             </div>
