CSV icon changed

--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -64,7 +64,7 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a href=""><i class="icon-code"></i> JSON</a>
-                                <a href=""><i class="icon-code"></i> CSV</a>
+                                <a href=""><i class="icon-table"></i> CSV</a>
                                 <a href="{% url "analyses.views.image" analysis.image_id %}"><i class="icon-picture"></i> Original Image</a>
                             </li>
                         </ul>
