--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -13,6 +13,12 @@
                     Dashboard
                 </li>
             </ul>
+            <ul class="breadcrumb hide newVersion" id="yellow">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <li>
+                    <a href="http://getghiro.org"><strong>Info!</strong> Ghiro is back with a brand new version. <i class="icon-download-alt"></i></a>
+                </li>
+            </ul>
         </div>
         <div class="content-body">
             <div class="row-fluid stats-box">
