--- a/templates/analyses/report/static_report.html
+++ b/templates/analyses/report/static_report.html
@@ -141,7 +141,7 @@
                 <td>
                     <table>
                         <tr>
-                            <td class="tftable">{% include 'analyses/report/_staticPreviews.html' %}</td>
+                            <td class="tftable">{% include 'analyses/report/_staticPreviews.html' with embed=True %}</td>
                         </tr>
                     </table>
                 </td>
