--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
             </div>
         </section>
         <div id="footer">
-            <small class="pull-right"><strong>Ghiro 0.1 - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" class="hide"><span class="badge badge-success">New version available</span></a></small>
+            <small class="pull-right"><strong>Ghiro 0.1 - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://burlone.info/">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" class="hide"><span class="badge badge-success">New version available</span></a></small>
         </div>
     </body>
 </html>
