--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -27,7 +27,7 @@
                         <span class="badge">Users</span>
                     </div>
                     <div class="stats-box-all-info">
-                        <i class="icon-user"> </i> {{ users_count }}
+                        <a href="{% url "users.views.admin_list_users" %}"><i class="icon-user"> </i> {{ users_count }}</a>
                     </div>
                 </div>
                 <div class="span3">
@@ -35,7 +35,7 @@
                         <span class="badge badge-info">Open cases</span>
                     </div>
                     <div class="stats-box-all-info">
-                        <i class="icon-briefcase"> </i> {{ open_cases_count }}
+                        <a href="{% url "analyses.views.list_cases" %}"><i class="icon-briefcase"> </i> {{ open_cases_count }}</a>
                     </div>
                 </div>
                 <div class="span3">
