--- a/templates/analyses/report/_static.html
+++ b/templates/analyses/report/_static.html
@@ -20,6 +20,9 @@
             </li>
             {% endif %}
             <li>
+                <a data-toggle="tab" href="#strings">Strings</a>
+            </li>
+            <li>
                 <a data-toggle="tab" href="#server-hex">Hex dump</a>
             </li>
         </ul>
@@ -61,6 +64,11 @@
                        {% endif %}
                         </tbody>
                     </table>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="strings">
+                <div class="row-fluid">
+                    {% include 'analyses/report/_staticStrings.html' %}
                 </div>
             </div>
             <div class="tab-pane fade" id="server-hex">
