--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -63,8 +63,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href=""><i class="icon-code"></i> JSON</a>
-                                <a href=""><i class="icon-table"></i> CSV</a>
+                                <a href="{% url "analyses.views.export_json" analysis.id %}"><i class="icon-code"></i> JSON report</a>
+                                <a href=""><i class="icon-table"></i> CSV report</a>
                                 <a href="{% url "analyses.views.image" analysis.image_id %}"><i class="icon-picture"></i> Original Image</a>
                             </li>
                         </ul>
