Bugfix strings greater than 70 characters

--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -34,7 +34,11 @@
             Description:
         </dt>
         <dd>
-            {{ case.description }}
+            {% if case.description|length > 70 %}
+                {{ case.description|slice:":70" }} ...
+            {% else %}
+                {{ case.description }}
+            {% endif %}
         </dd>
         {% endif %}
         <dt>
